# lambda-runtime-api-daemon

./: .dockerignore  .gitignore  Makefile  README.md  go.mod  go.sum
cmd/lambda-runtime-api-daemon/: main.go
cmd/lambda-server/: main.go
diagrams/: lambda-architecture.odg  lambda-runtime-api-daemon.xcf  rapid-invocations-implementation.odg  wasm.odg
docker/: Dockerfile-daemon  Dockerfile-rpcclient  Dockerfile-server
examples/: Readme.md
examples/echo/: Readme.md
examples/echo/echo-clients/: .gitignore  Makefile  aioboto3_echo_client.py  amqprpc_echo_client.py  boto3_echo_client.py  go.mod  go.sum  rpcclient.go
examples/echo/echo-lambda-aws-base/: .dockerignore  Dockerfile  README.md  echo-lambda.sh
examples/echo/echo-lambda-custom-runtime/: .dockerignore  Dockerfile  README.md  bootstrap  echo-lambda.sh  function.sh
examples/echo/echo-lambda-go/: .dockerignore  Dockerfile  Dockerfile-awsgobase  Dockerfile-awsprovidedbase  (+6 more)
examples/utils/: amqp_0_9_1_messaging_asyncio.py
examples/wasm/: Readme.md
examples/wasm/image-bmp/image-bmp-rust/: Cargo.toml
examples/wasm/image-bmp/image-bmp-rust/src/: main.rs
examples/wasm/image-classification/image-classification-rust/: Cargo.toml
examples/wasm/image-classification/image-classification-rust/src/: main.rs
examples/wasm/image-greyscale/image-greyscale-rust/: Cargo.toml
examples/wasm/image-greyscale/image-greyscale-rust/src/: main.rs
pkg/invokeapi/: invokeapi.go  invokeapiserver.go  invoker.go  rapiinvoker.go  rpcinvoker.go  rpcserver.go
pkg/logging/: logging.go  sloghandlers.go
pkg/messaging/: amqp091.go  api.go
pkg/process/: proc.go  process-manager.go
pkg/runtimeapi/: extensionsapi.go  runtimeapi.go  runtimeapiserver.go
(+93 files in other folders)
